--- a/hello.cproject.yml
+++ b/hello.cproject.yml
@@ -19,10 +19,6 @@ project:
   linker:
     - script: RTE/Device/MIMXRT1062DVL6A/MIMXRT1062xxxxx_flexspi_nor.scf
 
-  misc:
-    - Link:
-      - '--predefine="-DXIP_BOOT_HEADER_ENABLE=1"'
-
   components:
     - component: CMSIS:CORE
     - component: CMSIS:RTOS2:Keil RTX5&Source
@@ -31,28 +27,23 @@ project:
 
     - component: Device:Startup
 
-    - component: NXP::Device:CMSIS:MIMXRT1062_header
-    - component: NXP::Device:CMSIS:MIMXRT1062_system
+    - component: Device:CMSIS:MIMXRT1062_header
+    - component: Device:CMSIS:MIMXRT1062_system
 
-    - component: NXP::Device:SDK Drivers:clock
-    - component: NXP::Device:SDK Drivers:common
-    - component: NXP::Device:SDK Drivers:gpio
-    - component: NXP::Device:SDK Drivers:iomuxc
-    - component: NXP::Device:SDK Drivers:lists
-    - component: NXP::Device:SDK Drivers:lpuart
-    - component: NXP::Device:SDK Drivers:lpuart_adapter
-    - component: NXP::Device:SDK Drivers:nic301
-    - component: NXP::Device:SDK Drivers:xip_device
+    - component: Device:SDK Drivers:clock
+    - component: Device:SDK Drivers:common
+    - component: Device:SDK Drivers:gpio
+    - component: Device:SDK Drivers:iomuxc
+    - component: Device:SDK Drivers:lists
+    - component: Device:SDK Drivers:lpuart
+    - component: Device:SDK Drivers:lpuart_adapter
+    - component: Device:SDK Drivers:nic301
+    - component: Device:SDK Drivers:xip_device
 
-    - component: NXP::Device:SDK Utilities:assert
-    - component: NXP::Device:SDK Utilities:debug_console
-    - component: NXP::Device:SDK Utilities:serial_manager
-    - component: NXP::Device:SDK Utilities:serial_manager_uart
+    - component: Device:SDK Utilities:assert
+    - component: Device:SDK Utilities:debug_console
+    - component: Device:SDK Utilities:serial_manager
+    - component: Device:SDK Utilities:serial_manager_uart
 
-    - component: NXP::Board Support:SDK Drivers:evkbmimxrt1060
-    - component: NXP::Board Support:SDK Project Template:project_template&evkbmimxrt1060
-
-  output:
-    type:
-      - elf
-      - hex
+    - component: Board Support:SDK Drivers:evkbmimxrt1060
+    - component: Board Support:SDK Project Template:project_template&evkbmimxrt1060
