Added pack caching and index update.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,18 @@ jobs:
       - name: Activate Arm tool license
         uses: ARM-software/cmsis-actions/armlm@v1
 
+      - name: Cache downloaded packs
+        uses: actions/cache@v4
+        with:
+          key: cmsis-packs-download
+          path: /home/runner/.cache/arm/packs/.Download
+
+      # Initialize and update the index of CMSIS packs available online
+      - name: Initialize CMSIS pack root folder
+        run: |
+          cpackget init https://www.keil.com/pack/index.pidx
+          cpackget update-index
+
       # Build the release and debug executable for the AC6 compiler
       - name: Build release and debug executable
         run: |
