--- a/hello.cbuild-pack.yml
+++ b/hello.cbuild-pack.yml
@@ -2,13 +2,17 @@ cbuild-pack:
   resolved-packs:
     - resolved-pack: ARM::CMSIS@5.9.0
       selected-by-pack:
+        - ARM::CMSIS
         - ARM::CMSIS@5.9.0
     - resolved-pack: ARM::CMSIS-Compiler@1.0.0
       selected-by-pack:
+        - ARM::CMSIS-Compiler
         - ARM::CMSIS-Compiler@1.0.0
     - resolved-pack: NXP::MIMXRT1060-EVKB_BSP@16.1.0
       selected-by-pack:
+        - NXP::MIMXRT1060-EVKB_BSP
         - NXP::MIMXRT1060-EVKB_BSP@16.1.0
     - resolved-pack: NXP::MIMXRT1062_DFP@16.1.0
       selected-by-pack:
+        - NXP::MIMXRT1062_DFP
         - NXP::MIMXRT1062_DFP@16.1.0
